# Intelligent-Home

./: README.md
project/: Makefile-arm-mqtt  (+6 more)
project-test/: Makefile  main.c
project-test/UI/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h
project-test/UI/fonts/: ui_font_Font1.c
project-test/UI/images/: ui_img_air_conditioner_png.c  ui_img_curtain_loudspeaker_on_png.c  ui_img_curtain_off_png.c  ui_img_curtain_on_png.c  ui_img_light_off_png.c  ui_img_light_on_png.c  ui_img_loudspeaker_off_png.c
project-test/UI/screens/: MQTT.c  MQTT.h  ui_Screen1.c  ui_Screen1.h  ui_Screen2.c  ui_Screen2.h  ui_Screen3.c  ui_Screen3.h
project/UI/: CMakeLists.txt  MQTT.c  MQTT.h  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.c.backup_broken  ui_events.h
project/UI/fonts/: ui_font_Date.c  ui_font_Font18.c  ui_font_font16.c  ui_font_musicMode14.c  ui_font_musicMode16.c
project/UI/images/: cloud.c  cloudy.c  curtain.c  fog.c  heavy_rain.c  light_click.c  light_on.c  light_rain.c  mid_rain.c  play.c  sun.c  ui_img_1611275694.c  ui_img_1850939063.c  ui_img_214448395.c  ui_img_855347034.c  ui_img_920086830.c  ui_img_back_png.c  ui_img_battery_png.c  ui_img_bed_png.c  ui_img_cinema_png.c  ui_img_end_png.c  ui_img_enter_png.c  ui_img_forward_png.c  ui_img_home_png.c  ui_img_light_png.c  ui_img_logout_png.c  ui_img_pause_png.c  ui_img_sofa_png.c  ui_img_sun_png.c  ui_img_wifi_png.c  ui_img_yoga_png.c  window_shade_click.c
project/UI/screens/: ui_Screen1.c  ui_Screen1.h  ui_Screen2.c  ui_Screen2.h  ui_Screen3.c  ui_Screen3.h  ui_time_manager.c  ui_weather.c  ui_weather.h
(+1 files in other folders)
