SET(SOURCES screens/ui_Screen1.c
    screens/ui_Screen2.c
    screens/ui_Screen3.c
    ui.c
    components/ui_comp_hook.c
    ui_helpers.c
    ui_events.c
    images/ui_img_background_png.c
    images/ui_img_home_png.c
    images/ui_img_sofa_png.c
    images/ui_img_sun_png.c
    images/ui_img_wifi_png.c
    images/ui_img_battery_png.c
    images/ui_img_enter_png.c
    images/ui_img_bed_png.c
    images/ui_img_yoga_png.c
    images/ui_img_855347034.c
    images/ui_img_cinema_png.c
    images/ui_img_logout_png.c
    images/ui_img_orange_png.c
    images/ui_img_blue_png.c
    images/ui_img_green_png.c
    images/ui_img_purple_png.c
    images/ui_img_pause_png.c
    images/ui_img_214448395.c
    images/ui_img_end_png.c
    images/ui_img_back_png.c
    images/ui_img_forward_png.c
    images/ui_img_920086830.c
    images/ui_img_light_png.c
    images/ui_img_1611275694.c
    images/ui_img_1850939063.c
    fonts/ui_font_Date.c
    fonts/ui_font_font16.c
    fonts/ui_font_Font18.c
    fonts/ui_font_musicMode14.c
    fonts/ui_font_musicMode16.c)

add_library(ui ${SOURCES})
